--- a/devops_setup/jenkins-deploy/config
+++ b/devops_setup/jenkins-deploy/config
@@ -16,10 +16,7 @@ file_system_id=fs-b7225f7a
 busybox_image=216059448262.dkr.ecr.ap-east-1.amazonaws.com/devops/busybox:1.32
 
 # jenkins镜像地址
-jenkins_image=216059448262.dkr.ecr.ap-east-1.amazonaws.com/devops/jenkins:2.277.3-lts
-
-# jenkins插件下载地址
-jenkins_plugins_url=https://jack-test-devops.s3.ap-east-1.amazonaws.com/jenkins-3.3.9-plugins.tar.gz
+jenkins_image=216059448262.dkr.ecr.ap-east-1.amazonaws.com/devops/jenkins:2.293-plugins
 
 # jenki部署到的kubernetes namespace名称
 namespace=devops
