--- a/devops_setup/sonarqube-deploy/config
+++ b/devops_setup/sonarqube-deploy/config
@@ -16,7 +16,7 @@ busybox_image=216059448262.dkr.ecr.ap-east-1.amazonaws.com/devops/busybox:1.32
 sonarqube_admin_password=admin1234
 
 # sonarqube镜像地址
-sonarqube_image=216059448262.dkr.ecr.ap-east-1.amazonaws.com/devops/sonarqube:8.5.1-community
+sonarqube_image=216059448262.dkr.ecr.ap-east-1.amazonaws.com/devops/sonarqube:8.5.1-community-plugins
 
 # curl镜像地址
 curl_image=216059448262.dkr.ecr.ap-east-1.amazonaws.com/devops/curl:latest
