--- a/devops_setup/sonarqube-deploy/config
+++ b/devops_setup/sonarqube-deploy/config
@@ -17,6 +17,7 @@ sonarqube_admin_password=admin1234
 
 # sonarqube镜像地址
 sonarqube_image=216059448262.dkr.ecr.ap-east-1.amazonaws.com/devops/sonarqube:8.5.1-community-plugins
+sonarqube_plugins_image=216059448262.dkr.ecr.ap-east-1.amazonaws.com/devops/sonarqube-plugins:8.5.1
 
 # curl镜像地址
 curl_image=216059448262.dkr.ecr.ap-east-1.amazonaws.com/devops/curl:latest
