--- a/devops_setup/sonarqube-deploy/sonarqube.yaml.template
+++ b/devops_setup/sonarqube-deploy/sonarqube.yaml.template
@@ -2,8 +2,6 @@ extraInitContainers:
   - name: "init-plugins"
     image: "SONARQUBE_PLUGINS_IMAGE"
     imagePullPolicy: "IfNotPresent"
-    securityContext:
-      runAsNonRoot: true
     command:
       - bash
       - "-c"
@@ -12,3 +10,5 @@ extraInitContainers:
       - mountPath: /opt/sonarqube/extensions
         name: sonarqube
         subPath: extensions
+  securityContext:
+    fsGroup: 0
