--- a/devops_setup/gitlab-deploy/config
+++ b/devops_setup/gitlab-deploy/config
@@ -27,13 +27,13 @@ limits_cpu=2000m
 limits_mem=4096Mi
 
 # gitlab连接postgresql参数
-gitlab_postgresql_db_host=gitlab.cluster-cof70yepyr2j.ap-east-1.rds.amazonaws.com
+gitlab_postgresql_db_host=gitlab-postgres.devops.svc.cluster.local
 gitlab_postgresql_db_database=gitlab
-gitlab_postgresql_db_username=devops
+gitlab_postgresql_db_username=gitlab
 gitlab_postgresql_db_password=admin1234
 gitlab_postgresql_db_port=5432
 
 # gitlab连接redis参数
 # 注意：aws postgresql不能使用集群模式，也不需设置密码
-gitlab_redis_host=gitlab-redis.fob5vn.ng.0001.ape1.cache.amazonaws.com
+gitlab_redis_host=gitlab-redis..devops.svc.cluster.local
 gitlab_redis_port=6379
