--- a/devops_setup/nlb/ingress-nginx.yaml
+++ b/devops_setup/nlb/ingress-nginx.yaml
@@ -266,7 +266,7 @@ metadata:
     service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
     service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: 'true'
     service.beta.kubernetes.io/aws-load-balancer-internal: "true"
-    service.beta.kubernetes.io/aws-load-balancer-type: "nlb-ip"
+    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
   labels:
     helm.sh/chart: ingress-nginx-3.27.0
     app.kubernetes.io/name: ingress-nginx
@@ -292,10 +292,6 @@ spec:
       port: 22
       protocol: TCP
       targetPort: 22
-    - name: jenkins-tcp-50000
-      port: 50000
-      protocol: TCP
-      targetPort: 50000
   selector:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
