--- a/devops_setup/sonarqube-deploy/config
+++ b/devops_setup/sonarqube-deploy/config
@@ -15,7 +15,7 @@ busybox_image=216059448262.dkr.ecr.ap-east-1.amazonaws.com/devops/busybox:1.32
 sonarqube_admin_password=admin1234
 
 # sonarqube镜像地址
-sonarqube_image=216059448262.dkr.ecr.ap-east-1.amazonaws.com/devops/sonarqube:8.5.1-community-plugins
+sonarqube_image=216059448262.dkr.ecr.ap-east-1.amazonaws.com/devops/sonarqube:8.5.1-community
 sonarqube_plugins_image=216059448262.dkr.ecr.ap-east-1.amazonaws.com/devops/sonarqube-plugins:8.5.1
 
 # curl镜像地址
